# rules_vhdl

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  go.mod  pyproject.toml
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.github/workflows/: ci.yml  publish.yml  release.yml  release_prep.sh
doc/: rules.md
e2e/custom_py_deps/: .bazelrc  BUILD.bazel  MODULE.bazel  pyproject.toml
e2e/custom_py_deps/vhdl/: tb.vhd
e2e/inherited_deps/: .bazelrc  BUILD.bazel  MODULE.bazel  custom_runner.py  pyproject.toml
e2e/inherited_deps/vhdl/: lib.vhd
e2e/minimal_example/: .bazelrc  BUILD.bazel  MODULE.bazel
e2e/minimal_example/vhdl/: tb.vhd
e2e/simple_example/: .bazelrc  BUILD.bazel  MODULE.bazel
e2e/simple_example/vhdl/: lib.vhd
e2e/vhdl/: tb.vhd
examples/basic/: BUILD.bazel  custom_runner.py
examples/basic/vhdl/: flat_io.vhd  interfaces_2019.vhd  lib.vhd  record_io.vhd  tb.vhd  tb_record_io.vhd  tb_vunit_min.vhd  view_2019.vhd
examples/cocotb/: BUILD.bazel  custom_runner.py  runner.py  test_dff.py
examples/cocotb/vhdl/: dff.vhd
examples/gazelle_vhdl/: run.py
examples/gazelle_vhdl/src/: BUILD.bazel
examples/gazelle_vhdl/src/test/: BUILD.bazel
examples/uart/: BUILD.bazel  run_with_bazel.py
sim/: BUILD.bazel  cocotb_bazel_helper.py  cocotb_rules.bzl  defs.bzl  run.py  sim.bzl  vunit_bazel_helper.py  vunit_rules.bzl
sim/mock_vunit/: BUILD.bazel  vunit.py
simulator/: BUILD.bazel  extensions.bzl  ghdl.bzl  ghdl_new.bzl  mock.bzl  mock_bin.sh  nvc.bzl
toolchain/: BUILD.bazel  extensions.bzl  ghdl.bzl  nvc.bzl
tooling/gazelle/vhdl/: BUILD.bazel  lang.go  resolver.go  scanner.go
vhdl/: BUILD.bazel  defs.bzl  translate_and_verify.bzl  vhdl.bzl  vhdl_wrapper_generator.py
vhdl/config/: BUILD.bazel
vhdl/test/: BUILD.bazel  extra_constraint.xdc  meta_data.json  sim_tests.bzl  tests.bzl  vivado.tcl  vunit_tests.bzl
