module(name = "rules_vhdl", version = "0.0.0")

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")
# bazel_dep(name = "rules_python", version = "2.0.1")
bazel_dep(name = "aspect_rules_py", version = "1.11.5")

interpreters = use_extension("@aspect_rules_py//py/unstable:extension.bzl", "python_interpreters")
interpreters.toolchain(python_version = "3.12", is_default = True)
use_repo(interpreters, "python_interpreters")
register_toolchains("@python_interpreters//:all")

uv_bin = use_extension("@aspect_rules_py//uv/unstable:extension.bzl", "uv_bin")
uv_bin.toolchain(version = "0.11.6")
use_repo(uv_bin, "uv")

uv = use_extension("@aspect_rules_py//uv/unstable:extension.bzl", "uv")
uv.declare_hub(
    hub_name = "pypi",      # Or whatever you wish
)

uv.project(
    hub_name = "pypi",
    lock = "//:uv.lock",
    pyproject = "//:pyproject.toml",
    # Build tools injected for sdist packages that need them (e.g. maturin, setuptools)
    default_build_dependencies = ["build", "setuptools"],
)

use_repo(uv, "pypi")

vhdl_toolchains = use_extension("//simulator:extensions.bzl", "vhdl_toolchains")
vhdl_toolchains.ghdl(
    name = "ghdl_6_0_mcode",
    version = "6.0",
    backend = "mcode",
    url = "https://github.com/ghdl/ghdl/releases/download/v6.0.0/ghdl-mcode-6.0.0-ubuntu24.04-x86_64.tar.gz",
    sha256 = "30d6a977b8456d140bbafecbbe64b1947a3d92eeae8f5e6d9f528a174f9566e7",
    strip_prefix = "ghdl-mcode-6.0.0-ubuntu24.04-x86_64",
    is_default = True,
)
vhdl_toolchains.ghdl(
    name = "ghdl_6_0_llvm",
    version = "6.0",
    backend = "llvm",
    url = "https://github.com/ghdl/ghdl/releases/download/v6.0.0/ghdl-llvm-6.0.0-ubuntu24.04-x86_64.tar.gz",
    sha256 = "e0064cd3d1569e7fca27b186b0d71e80c087de90db4e466ed77dc669a574d8bc",
    strip_prefix = "ghdl-llvm-6.0.0-ubuntu24.04-x86_64",
)

# check the lazy fetch is working with a broken toolchain
vhdl_toolchains.nvc(
    name = "broken_nvc",
    version = "9.9.9",
    url = "https://example.com/nvc.tar.gz",
    sha256 = "0000000000000000000000000000000000000000000000000000000000000000",
)

use_repo(vhdl_toolchains, "vhdl_toolchains")

register_toolchains(
    "@vhdl_toolchains//:all",
    "//simulator:mock_ghdl_toolchain",
    "//simulator:mock_nvc_toolchain",
)

register_toolchains("@uv//:all")
