module(
    name = "gateweaver_rules_vhdl",
    version = "0.1.0",
)

bazel_dep(name = "bazel_skylib", version = "1.9.0", dev_dependency = True)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "aspect_rules_py", version = "1.11.5")
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.41.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk", dev_dependency = True)
go_sdk.download(version = "1.22.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps", dev_dependency = True)
go_deps.from_file(go_mod = "//:go.mod")

interpreters = use_extension("@aspect_rules_py//py/unstable:extension.bzl", "python_interpreters", dev_dependency = True)
interpreters.toolchain(
    is_default = True,
    python_version = "3.12",
)
use_repo(interpreters, "python_interpreters")

register_toolchains(
    "@python_interpreters//:all",
    dev_dependency = True,
)

uv_bin = use_extension("@aspect_rules_py//uv/unstable:extension.bzl", "uv_bin", dev_dependency = True)
uv_bin.toolchain(version = "0.11.6")
use_repo(uv_bin, "uv")

uv = use_extension("@aspect_rules_py//uv/unstable:extension.bzl", "uv", dev_dependency = True)
uv.declare_hub(
    hub_name = "pypi",
)
uv.project(
    default_build_dependencies = [
        "build",
        "setuptools",
    ],
    hub_name = "pypi",
    lock = "//:uv.lock",
    pyproject = "//:pyproject.toml",
)
use_repo(uv, "pypi")

vhdl_toolchains = use_extension("//simulator:extensions.bzl", "vhdl_toolchains")
vhdl_toolchains.ghdl(
    name = "ghdl_6_0_mcode",
    backend = "mcode",
    is_default = True,
    sha256 = "30d6a977b8456d140bbafecbbe64b1947a3d92eeae8f5e6d9f528a174f9566e7",
    strip_prefix = "ghdl-mcode-6.0.0-ubuntu24.04-x86_64",
    url = "https://github.com/ghdl/ghdl/releases/download/v6.0.0/ghdl-mcode-6.0.0-ubuntu24.04-x86_64.tar.gz",
    version = "6.0",
)
vhdl_toolchains.ghdl(
    name = "ghdl_6_0_llvm",
    backend = "llvm",
    sha256 = "e0064cd3d1569e7fca27b186b0d71e80c087de90db4e466ed77dc669a574d8bc",
    strip_prefix = "ghdl-llvm-6.0.0-ubuntu24.04-x86_64",
    url = "https://github.com/ghdl/ghdl/releases/download/v6.0.0/ghdl-llvm-6.0.0-ubuntu24.04-x86_64.tar.gz",
    version = "6.0",
)
vhdl_toolchains.nvc_local(
    name = "local_nvc",
    path = "../nvc/build",
    version = "1.12.1",
)
use_repo(vhdl_toolchains, "vhdl_toolchains")

register_toolchains(
    "@vhdl_toolchains//:all",
    "//simulator:mock_ghdl_toolchain",
    "//simulator:mock_nvc_toolchain",
)

register_toolchains(
    "@uv//:all",
    dev_dependency = True,
)
