[project]
name = "gateweaver_rules_vhdl"
classifiers = ["Private :: Do Not Upload"]
version = "0"
requires-python = ">= 3.12"
# Dependencies should NOT use "Version Matching clauses" (matching operator `==`)
# https://packaging.python.org/en/latest/specifications/version-specifiers/#version-matching
# This project uses 'uv pip compile' from https://github.com/astral-sh/uv
# which will ensure the resolved versions of both direct and indirect dependencies are pinned.
# Therefore we only need to constrain versions when some ranges 
# of dependency versions are not compatible.
dependencies = [
    "vunit-hdl==5.0.0-dev.10",
    "cocotb>=2.0.0",
    "pytest>=9.0.0",
    "build",
    "setuptools",
    "wheel"
]

# See https://docs.astral.sh/ruff/configuration/
[tool.ruff]

# [tool.uv.workspace]
# members = [
#     "e2e/",
# ]
