package(default_visibility = ["//visibility:public"])

load(":mock.bzl", "mock_ghdl_toolchain", "mock_nvc_toolchain")

toolchain_type(name ="toolchain_type")

# --- Constraint Settings (Les catégories) ---
constraint_setting(name = "version")
constraint_setting(name = "backend")

# Versions
constraint_value(name = "v2_0_0", constraint_setting = ":version")
constraint_value(name = "v3_0_0", constraint_setting = ":version")
constraint_value(name = "v4_1_0", constraint_setting = ":version")

# Backends
constraint_value(name = "mcode", constraint_setting = ":backend")
constraint_value(name = "llvm",  constraint_setting = ":backend")

# Mock Toolchains for Testing
mock_ghdl_toolchain(
    name = "mock_ghdl_impl",
    ghdl_binary = ":mock_bin.sh",
)

toolchain(
    name = "mock_ghdl_toolchain",
    toolchain = ":mock_ghdl_impl",
    toolchain_type = ":toolchain_type",
    target_settings = ["//vhdl/config:simulator_ghdl"],
)

mock_nvc_toolchain(
    name = "mock_nvc_impl",
    nvc_binary = ":mock_bin.sh",
)

toolchain(
    name = "mock_nvc_toolchain",
    toolchain = ":mock_nvc_impl",
    toolchain_type = ":toolchain_type",
    target_settings = ["//vhdl/config:simulator_nvc"],
)