load(":mock.bzl", "mock_ghdl_toolchain", "mock_nvc_toolchain")

package(default_visibility = ["//visibility:public"])

toolchain_type(name = "toolchain_type")

# Mock matchers
config_setting(
    name = "match_mock_ghdl",
    flag_values = {
        "//vhdl/config:simulator": "ghdl",
        "//vhdl/config:version": "mock",
        "//vhdl/config:backend": "default",
    },
)

config_setting(
    name = "match_mock_nvc",
    flag_values = {
        "//vhdl/config:simulator": "nvc",
        "//vhdl/config:version": "mock",
    },
)

# Mock Toolchains for Testing
mock_ghdl_toolchain(
    name = "mock_ghdl_impl",
    ghdl_binary = ":mock_bin.sh",
)

toolchain(
    name = "mock_ghdl_toolchain",
    target_settings = [":match_mock_ghdl"],
    toolchain = ":mock_ghdl_impl",
    toolchain_type = ":toolchain_type",
)

mock_nvc_toolchain(
    name = "mock_nvc_impl",
    nvc_binary = ":mock_bin.sh",
)

toolchain(
    name = "mock_nvc_toolchain",
    target_settings = [":match_mock_nvc"],
    toolchain = ":mock_nvc_impl",
    toolchain_type = ":toolchain_type",
)
