#  Copyright 2026 Nocilis
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#      http://www.apache.org/licenses/LICENSE-2.0
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

load(":mock.bzl", "mock_ghdl_toolchain", "mock_nvc_toolchain")

package(default_visibility = ["//visibility:public"])

toolchain_type(name = "toolchain_type")

# Mock matchers
config_setting(
    name = "match_mock_ghdl",
    flag_values = {
        "//vhdl/config:simulator": "ghdl",
        "//vhdl/config:version": "mock",
        "//vhdl/config:backend": "default",
    },
)

config_setting(
    name = "match_mock_nvc",
    flag_values = {
        "//vhdl/config:simulator": "nvc",
        "//vhdl/config:version": "mock",
    },
)

# Mock Toolchains for Testing
mock_ghdl_toolchain(
    name = "mock_ghdl_impl",
    ghdl_binary = ":mock_bin.sh",
)

toolchain(
    name = "mock_ghdl_toolchain",
    target_settings = [":match_mock_ghdl"],
    toolchain = ":mock_ghdl_impl",
    toolchain_type = ":toolchain_type",
)

mock_nvc_toolchain(
    name = "mock_nvc_impl",
    nvc_binary = ":mock_bin.sh",
)

toolchain(
    name = "mock_nvc_toolchain",
    target_settings = [":match_mock_nvc"],
    toolchain = ":mock_nvc_impl",
    toolchain_type = ":toolchain_type",
)
