load("@gateweavers_rules_vhdl//vhdl:vhdl.bzl", "vhdl_library")
load("@gateweavers_rules_vhdl//sim:vunit_rules.bzl", "vunit_sim")

vhdl_library(
    name = "lib",
    srcs = ["vhdl/lib.vhd"],
    library_name = "lib",
)

vunit_sim(
    name = "tb_custom_deps",
    srcs = ["vhdl/tb.vhd"],
    dut = ":lib",
    main = "custom_runner.py",
    deps = ["@pypi//crc"],
    simulator = "@vhdl_toolchains//:ghdl_6_0_mcode",
)
