load("@gateweaver_rules_vhdl//vhdl:vhdl.bzl", "vhdl_library")
load("@gateweaver_rules_vhdl//sim:sim.bzl", "vhdl_test")

vhdl_library(
    name = "lib",
    srcs = ["vhdl/lib.vhd"],
    library_name = "work",
)

vhdl_test(
    name = "tb_ghdl",
    srcs = ["vhdl/tb.vhd"],
    dut = ":lib",
    testbench_entity = "tb",
    tool_simulator = "ghdl",
)

vhdl_test(
    name = "tb_ghdl_6_0",
    srcs = ["vhdl/tb.vhd"],
    dut = ":lib",
    testbench_entity = "tb",
    tool_simulator = "ghdl",
    tool_version = "6.0",
    tool_backend = "mcode",
)

vhdl_test(
    name = "tb_ghdl_6_0_llvm",
    srcs = ["vhdl/tb.vhd"],
    dut = ":lib",
    testbench_entity = "tb",
    tool_simulator = "ghdl",
    tool_version = "6.0",
    tool_backend = "llvm",
    # tags = ["manual"],
)

vhdl_test(
    name = "tb_ghdl_easy",
    srcs = ["vhdl/tb.vhd"],
    dut = ":lib",
    testbench_entity = "tb",
    simulator = "@vhdl_toolchains//:ghdl_6_0_mcode",
)