load("@gateweavers_rules_vhdl//vhdl:defs.bzl", "vhdl_library", "vhdl_translate")
load("@gateweavers_rules_vhdl//sim:defs.bzl", "vhdl_test")

vhdl_library(
    name = "lib",
    srcs = ["vhdl/lib.vhd"],
    library_name = "work",
)

vhdl_translate(
    name = "dummy_translated",
    src = ":lib",
    entity_name = "dummy",
    preserve_ports = True,
)

vhdl_translate(
    name = "dummy_translated_raw",
    src = ":lib",
    entity_name = "dummy",
    preserve_ports = False,
)

vhdl_library(
    name = "translated_lib",
    srcs = [":dummy_translated"],
    library_name = "translated_work",
)

vhdl_test(
    name = "tb_ghdl",
    srcs = ["vhdl/tb.vhd"],
    dut = ":lib",
    testbench_entity = "tb",
    tool_simulator = "ghdl",
)

vhdl_test(
    name = "tb_ghdl_6_0",
    srcs = ["vhdl/tb.vhd"],
    dut = ":lib",
    testbench_entity = "tb",
    tool_simulator = "ghdl",
    tool_version = "6.0",
    tool_backend = "mcode",
)

vhdl_test(
    name = "tb_ghdl_6_0_llvm",
    srcs = ["vhdl/tb.vhd"],
    dut = ":lib",
    testbench_entity = "tb",
    tool_simulator = "ghdl",
    tool_version = "6.0",
    tool_backend = "llvm",
    # tags = ["manual"],
)

vhdl_test(
    name = "tb_ghdl_easy",
    srcs = ["vhdl/tb.vhd"],
    dut = ":lib",
    testbench_entity = "tb",
    simulator = "@vhdl_toolchains//:ghdl_6_0_mcode",
)