module(name = "gateweaver_rules_vhdl_e2e")

bazel_dep(name = "gateweaver_rules_vhdl")
local_path_override(
    module_name = "gateweaver_rules_vhdl",
    path = "../..",
)

vhdl_toolchains = use_extension("@gateweaver_rules_vhdl//simulator:extensions.bzl", "vhdl_toolchains")
use_repo(vhdl_toolchains, "vhdl_toolchains")

register_toolchains(
    "@vhdl_toolchains//:all",
)
