#  Copyright 2026 Nocilis
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#      http://www.apache.org/licenses/LICENSE-2.0
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

load("//sim:sim.bzl", "vhdl_test")
load("//sim:vunit_rules.bzl", "vunit_sim")
load("//vhdl:vhdl.bzl", "vhdl_library")

vhdl_library(
    name = "lib",
    srcs = ["vhdl/lib.vhd"],
    library_name = "lib",
)

vhdl_test(
    name = "tb_ghdl",
    srcs = ["vhdl/tb.vhd"],
    dut = ":lib",
    testbench_entity = "tb",
    tool_simulator = "ghdl",
)

vhdl_test(
    name = "tb_ghdl_6_0",
    srcs = ["vhdl/tb.vhd"],
    dut = ":lib",
    testbench_entity = "tb",
    tool_backend = "mcode",
    tool_simulator = "ghdl",
    tool_version = "6.0",
)

vhdl_test(
    name = "tb_ghdl_6_0_llvm",
    srcs = ["vhdl/tb.vhd"],
    dut = ":lib",
    testbench_entity = "tb",
    tool_backend = "llvm",
    tool_simulator = "ghdl",
    tool_version = "6.0",
)

# this test need a localy compiled nvc
vhdl_test(
    name = "tb_nvc_local",
    srcs = ["vhdl/tb.vhd"],
    dut = ":lib",
    testbench_entity = "tb",
    tool_simulator = "nvc",
    tool_version = "1.21.0",
    tags = ["manual"],
)

vhdl_test(
    name = "tb_nvc_local_easy",
    srcs = ["vhdl/tb.vhd"],
    dut = ":lib",
    simulator = "@vhdl_toolchains//:local_nvc",
    testbench_entity = "tb",
    tags = ["manual"],
)

vunit_sim(
    name = "tb_vunit",
    srcs = ["vhdl/tb.vhd"],
    dut = ":lib",
    tool_backend = "llvm",
    tool_simulator = "ghdl",
    tool_version = "6.0",
)

vunit_sim(
    name = "tb_vunit_easy",
    srcs = ["vhdl/tb.vhd"],
    dut = ":lib",
    simulator = "@vhdl_toolchains//:ghdl_6_0_mcode",
)

vunit_sim(
    name = "tb_vunit_default",
    srcs = ["vhdl/tb.vhd"],
    dut = ":lib",
)

vhdl_test(
    name = "tb_ghdl_easy",
    srcs = ["vhdl/tb.vhd"],
    dut = ":lib",
    simulator = "@vhdl_toolchains//:ghdl_6_0_mcode",
    testbench_entity = "tb",
)

vunit_sim(
    name = "tb_vunit_custom",
    srcs = ["vhdl/tb.vhd"],
    dut = ":lib",
    main = "custom_runner.py",
    simulator = "@vhdl_toolchains//:ghdl_6_0_mcode",
)

vunit_sim(
    name = "tb_vunit_min",
    srcs = ["vhdl/tb_vunit_min.vhd"],
    dut = ":lib",
    main = "custom_runner.py",
    simulator = "@vhdl_toolchains//:ghdl_6_0_mcode",
)

vunit_sim(
    name = "tb_vunit_nvc_local",
    srcs = ["vhdl/tb_vunit_min.vhd"],
    dut = ":lib",
    simulator = "@vhdl_toolchains//:local_nvc",
    tags = ["manual"],
)
