#  Copyright 2026 Nocilis
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#      http://www.apache.org/licenses/LICENSE-2.0
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

load("//sim:sim.bzl", "vhdl_test")
load("//sim:vunit_rules.bzl", "vunit_sim")
load("//vhdl:vhdl.bzl", "vhdl_library", "vhdl_translate", "vhdl_wrapper")
load("//vhdl:translate_and_verify.bzl", "vhdl_translate_and_verify")

vhdl_library(
    name = "lib",
    srcs = ["vhdl/lib.vhd"],
    library_name = "lib",
)

vhdl_test(
    name = "tb_ghdl",
    srcs = ["vhdl/tb.vhd"],
    dut = ":lib",
    testbench_entity = "tb",
    tool_simulator = "ghdl",
)

vhdl_test(
    name = "tb_ghdl_6_0",
    srcs = ["vhdl/tb.vhd"],
    dut = ":lib",
    testbench_entity = "tb",
    tool_backend = "mcode",
    tool_simulator = "ghdl",
    tool_version = "6.0",
)

vhdl_test(
    name = "tb_ghdl_6_0_llvm",
    srcs = ["vhdl/tb.vhd"],
    dut = ":lib",
    testbench_entity = "tb",
    tool_backend = "llvm",
    tool_simulator = "ghdl",
    tool_version = "6.0",
)

# this test need a localy compiled nvc
vhdl_test(
    name = "tb_nvc_local",
    srcs = ["vhdl/tb.vhd"],
    dut = ":lib",
    testbench_entity = "tb",
    tool_simulator = "nvc",
    tool_version = "1.21.0",
    tags = ["manual"],
)

vhdl_test(
    name = "tb_nvc_local_easy",
    srcs = ["vhdl/tb.vhd"],
    dut = ":lib",
    simulator = "@vhdl_toolchains//:local_nvc",
    testbench_entity = "tb",
    tags = ["manual"],
)

vunit_sim(
    name = "tb_vunit",
    srcs = ["vhdl/tb.vhd"],
    dut = ":lib",
    tool_backend = "llvm",
    tool_simulator = "ghdl",
    tool_version = "6.0",
)

vunit_sim(
    name = "tb_vunit_easy",
    srcs = ["vhdl/tb.vhd"],
    dut = ":lib",
    simulator = "@vhdl_toolchains//:ghdl_7_0_mcode",
)

vunit_sim(
    name = "tb_vunit_default",
    srcs = ["vhdl/tb.vhd"],
    dut = ":lib",
)

vhdl_test(
    name = "tb_ghdl_easy",
    srcs = ["vhdl/tb.vhd"],
    dut = ":lib",
    simulator = "@vhdl_toolchains//:ghdl_7_0_mcode",
    testbench_entity = "tb",
)

vunit_sim(
    name = "tb_vunit_custom",
    srcs = ["vhdl/tb.vhd"],
    dut = ":lib",
    main = "custom_runner.py",
    simulator = "@vhdl_toolchains//:ghdl_7_0_mcode",
)

vunit_sim(
    name = "tb_vunit_min",
    srcs = ["vhdl/tb_vunit_min.vhd"],
    dut = ":lib",
    main = "custom_runner.py",
    simulator = "@vhdl_toolchains//:ghdl_7_0_mcode",
)

vunit_sim(
    name = "tb_vunit_nvc_local",
    srcs = ["vhdl/tb_vunit_min.vhd"],
    dut = ":lib",
    simulator = "@vhdl_toolchains//:local_nvc",
    tags = ["manual"],
)

vhdl_library(
    name = "record_io_lib",
    srcs = ["vhdl/record_io.vhd"],
    library_name = "work",
)

vhdl_translate(
    name = "record_io_translated_preserved",
    src = ":record_io_lib",
    entity_name = "record_io_test",
    preserve_ports = True,
)

vhdl_translate(
    name = "record_io_translated_raw",
    src = ":record_io_lib",
    entity_name = "record_io_test",
    preserve_ports = False,
    simulator = "@vhdl_toolchains//:ghdl_7_0_mcode",
)

vhdl_library(
    name = "interfaces_2019_lib",
    srcs = ["vhdl/interfaces_2019.vhd"],
    library_name = "work",
    vhdl_version = "2019",
)

vhdl_translate(
    name = "interfaces_2019_translated",
    src = ":interfaces_2019_lib",
    entity_name = "test_view",
    preserve_ports = False,
    simulator = "@vhdl_toolchains//:ghdl_7_0_mcode",
)

vhdl_library(
    name = "flat_io_lib",
    srcs = ["vhdl/flat_io.vhd"],
    library_name = "work",
    deps = [":record_io_lib"],
)

vhdl_wrapper(
    name = "record_io_normal_wrapper",
    src = ":record_io_lib",
    entity_name = "record_io_test",
    reverse = False,
)

vhdl_library(
    name = "record_io_normal_wrapper_lib",
    srcs = [":record_io_normal_wrapper"],
    deps = [":record_io_lib"],
)

vhdl_wrapper(
    name = "flat_io_reverse_wrapper",
    src = ":flat_io_lib",
    entity_name = "flat_io_test",
    reverse = True,
    # In reverse mode, the wrapper exposes record ports.
    # The record definitions must be available during ast xml generation,
    # which they are because flat_io_lib's source depends on work/my_types package.
    # But wait, flat_io.vhd does not import work.my_types.all; record_io.vhd does!
    # So we should pass record_io_lib as part of src or include the type definition dependency.
    # Wait, can we pass a vhdl_library that has transitively all of them?
    # Yes! Let's pass a target src that contains both or has them in deps.
)

vhdl_library(
    name = "flat_io_reverse_wrapper_lib",
    srcs = [
        ":flat_io_reverse_wrapper",
    ],
    deps = [
        ":flat_io_lib",
        ":record_io_lib", # for my_types package
    ],
)

vhdl_translate(
    name = "record_io_normal_wrapper_translated",
    src = ":record_io_normal_wrapper_lib",
    entity_name = "record_io_test_wrapper",
    preserve_ports = True,
)

vhdl_translate(
    name = "flat_io_reverse_wrapper_translated",
    src = ":flat_io_reverse_wrapper_lib",
    entity_name = "flat_io_test_wrapper",
    preserve_ports = True,
)

vhdl_translate_and_verify(
    name = "record_io_equivalence",
    src = ":record_io_lib",
    entity_name = "record_io_test",
    preserve_ports = False,
    testbench_srcs = ["vhdl/tb_record_io.vhd"],
    testbench_entity = "tb_record_io",
    test_type = "vhdl",
    simulator = "@vhdl_toolchains//:ghdl_7_0_mcode",
)