#  Copyright 2026 Nocilis
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#      http://www.apache.org/licenses/LICENSE-2.0
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

load("//vhdl:vhdl.bzl", "vhdl_library")
load("//sim:cocotb_rules.bzl", "cocotb_sim")

vhdl_library(
    name = "dff_lib",
    srcs = ["vhdl/dff.vhd"],
    library_name = "work",
)

cocotb_sim(
    name = "tb_dff",
    dut = ":dff_lib",
    hdl_toplevel = "dff",
    test_module = "test_dff",
    srcs = ["test_dff.py"],
    simulator = "@vhdl_toolchains//:ghdl_6_0_mcode",
)

cocotb_sim(
    name = "tb_dff_custom",
    dut = ":dff_lib",
    hdl_toplevel = "dff",
    test_module = "test_dff",
    srcs = ["test_dff.py"],
    main = "custom_runner.py",
    simulator = "@vhdl_toolchains//:ghdl_6_0_mcode",
)
