load("//vhdl:vhdl.bzl", "vhdl_library")
load("//sim:vunit_rules.bzl", "vunit_sim")

vhdl_library(
    name = "uart_lib",
    srcs = [
        "src/uart_rx.vhd",
        "src/uart_tx.vhd",
    ],
    library_name = "uart_lib",
)

vunit_sim(
    name = "tb_uart",
    srcs = [
        "src/test/tb_uart_rx.vhd",
        "src/test/tb_uart_tx.vhd",
    ],
    dut = ":uart_lib",
    main = "run.py",
)

vunit_sim(
    name = "tb_uart_with_bazel",
    srcs = [
        "src/test/tb_uart_rx.vhd",
        "src/test/tb_uart_tx.vhd",
    ],
    dut = ":uart_lib",
    main = "run_no_file.py",
)
