#    Copyright 2026 Nocilis

#    Licensed under the Apache License, Version 2.0 (the "License");
#    you may not use this file except in compliance with the License.
#    You may obtain a copy of the License at

#        http://www.apache.org/licenses/LICENSE-2.0

#    Unless required by applicable law or agreed to in writing, software
#    distributed under the License is distributed on an "AS IS" BASIS,
#    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#    See the License for the specific language governing permissions and
#    limitations under the License.

load("//vhdl:vhdl.bzl", "vhdl_flag")

package(default_visibility = ["//visibility:public"])

vhdl_flag(
    name = "simulator",
    build_setting_default = "ghdl",
)

vhdl_flag(
    name = "version",
    build_setting_default = "default",
)

vhdl_flag(
    name = "backend",
    build_setting_default = "default",
)

config_setting(
    name = "simulator_ghdl",
    flag_values = {":simulator": "ghdl"},
)

config_setting(
    name = "simulator_nvc",
    flag_values = {":simulator": "nvc"},
)
