
load("//vhdl/test:tests.bzl", "vhdl_rules_test_suite")
load("//vhdl/test:sim_tests.bzl", "sim_test_suite")
load("//vhdl/test:vunit_tests.bzl", "vunit_test_suite")

# Define the test suite
vhdl_rules_test_suite(name = "vhdl_tests")
sim_test_suite(name = "sim_tests")
vunit_test_suite(name = "vunit_tests")