#    Copyright 2026 Nocilis

#    Licensed under the Apache License, Version 2.0 (the "License");
#    you may not use this file except in compliance with the License.
#    You may obtain a copy of the License at

#        http://www.apache.org/licenses/LICENSE-2.0

#    Unless required by applicable law or agreed to in writing, software
#    distributed under the License is distributed on an "AS IS" BASIS,
#    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#    See the License for the specific language governing permissions and
#    limitations under the License.

load("//vhdl/test:sim_tests.bzl", "sim_test_suite")
load("//vhdl/test:tests.bzl", "vhdl_rules_test_suite")
load("//vhdl/test:vunit_tests.bzl", "vunit_test_suite")

# gazelle:vhdl_enabled false

# Define the test suite
vhdl_rules_test_suite(name = "vhdl_tests")

sim_test_suite(name = "sim_tests")

vunit_test_suite(name = "vunit_tests")
