#  Copyright 2026 Nocilis
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#      http://www.apache.org/licenses/LICENSE-2.0
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

load("@gateweavers_rules_vhdl//sim:vunit_rules.bzl", "vunit_sim")

vunit_sim(
    name = "tb_uart_rx",
    srcs = ["tb_uart_rx.vhd"],
    dut = "//examples/gazelle_vhdl/src:uart_lib",
    visibility = ["//visibility:public"],
)

vunit_sim(
    name = "tb_uart_tx",
    srcs = ["tb_uart_tx.vhd"],
    dut = "//examples/gazelle_vhdl/src:uart_lib",
    visibility = ["//visibility:public"],
)
